samples/_failures_safe/1761550479_e15a76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b6d4dd4.c: In function ‘main’:
./samples/SAFE/__tmp_1b6d4dd4.c:149:5: error: expected expression at end of input
  149 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_1b6d4dd4.c:149:5: error: expected declaration or statement at end of input
